# geo-assign

./: .gitignore  README.md
bezier/: Makefile  curve.cpp  curve.h  main.cpp
cpp-bezier/: curve.cpp  curve.h  main.cpp
iced-bezier/: Cargo.toml  README1.md
iced-bezier/src/: bezier.rs  biarc.rs  main.rs  tree.rs  util.rs
rs-bezier/: Cargo.toml  README.md
rs-bezier/src/: curve.rs  main.rs  settings.rs  support.rs
