[package]
name = "rs-bezier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.28"
conrod_core = "0.74"
conrod_glium = "0.74"
conrod_winit = "0.74"
winit = "0.23"
image = "0.22"
find_folder = "0.3.0"
